[gd_scene load_steps=15 format=3 uid="uid://b4p0gjac6kqln"]

[ext_resource type="Texture2D" uid="uid://mxdp67340w1r" path="res://art/Props and Items/props and items x1.png" id="1_damsb"]
[ext_resource type="Script" path="res://gameObjects/levels/terminal.gd" id="1_vnc2d"]
[ext_resource type="Texture2D" uid="uid://b4jkjhnnro4mw" path="res://art/UI/ui x1.png" id="3_dngq1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xw34x"]
atlas = ExtResource("1_damsb")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiqct"]
atlas = ExtResource("1_damsb")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5uuj"]
atlas = ExtResource("1_damsb")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xbac"]
atlas = ExtResource("1_damsb")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5e0k"]
atlas = ExtResource("1_damsb")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_m24vb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw34x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiqct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5uuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xbac")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5e0k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3kcn8"]
atlas = ExtResource("1_damsb")
region = Rect2(35, 98, 26, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4eq8k"]
size = Vector2(24, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_isbnv"]
size = Vector2(36, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqpx6"]
atlas = ExtResource("3_dngq1")
region = Rect2(265, 236, 13, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_uomci"]
atlas = ExtResource("1_damsb")
region = Rect2(9, 169, 47, 22)

[node name="terminal" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_vnc2d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0, 0.792157, 0.596078, 1)
sprite_frames = SubResource("SpriteFrames_m24vb")
animation = &"active"
autoplay = "default"
frame_progress = 0.0567977

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.57628e-07, -1.5)
scale = Vector2(1, 0.961538)
texture = SubResource("AtlasTexture_3kcn8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_4eq8k")

[node name="interactionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactionArea"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_isbnv")

[node name="TextureRect" type="TextureRect" parent="interactionArea"]
visible = false
offset_left = -12.0
offset_right = 1.0
offset_bottom = 12.0
texture = SubResource("AtlasTexture_fqpx6")

[node name="inputHandler" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="inputHandler"]
layout_mode = 0
offset_left = -51.0
offset_top = -53.0
offset_right = 51.0
offset_bottom = -17.0
texture = SubResource("AtlasTexture_uomci")

[node name="HBoxContainer" type="HBoxContainer" parent="inputHandler"]
layout_mode = 0
offset_left = -42.0
offset_top = -43.0
offset_right = 251.0
scale = Vector2(0.3, 0.3)
alignment = 1

[connection signal="body_entered" from="interactionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="interactionArea" to="." method="_on_interaction_area_body_exited"]
